# pubmed-research-fetcher

./: LICENSE  README.md
pubmed/: cancer_pfizer.csv  output.csv  pyproject.toml
pubmed/.github/: workflow.yml
pubmed/fetch_query/: pubmed_fetcher.py
pubmed/get_query/: get_paper_list.py
