[tool.poetry]
name = "pubmed"
version = "0.1.0"
description = "Tool to fetch and analyze PubMed research papers"
authors = ["Harleen Kaur <harleen9355@gmail.com>"]
readme = "README.md"
packages = [{include = "fetch_query"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers = "get_query.get_paper_list:run"